Fix for mobile slides being too wide

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ p {
 .tabcontent {
 	display: none; /* Set to 'flex' upon click of tablink */
 	flex-flow: column;
-	padding: 10px 30px;
+	padding: 10px 3vw;
 	height: 100%;
 	margin: 0px;
 }
@@ -130,7 +130,7 @@ p {
 .slides img {
 	height: auto;
 	width: 720px;
-	max-width: 70vw;
+	max-width: 80vw;
 	object-fit: contain;
 }
 
@@ -138,7 +138,7 @@ p {
 	height: 540px;
 	max-height: 80vh;
 	width: auto;
-	max-width: none;
+	max-width: 90vw;
 }
 
 #Film .slides img {
@@ -149,7 +149,7 @@ p {
 	height: 540px;
 	max-height: 80vh;
 	width: auto;
-	max-width: none;
+	max-width: 90vw;
 }
 
 #Contact #links {
@@ -268,7 +268,7 @@ p {
 	bottom: 0;
 	width: 100vw;
 	height: 100vh;
-	margin-left: -30px;
+	margin-left: -3vw;
 	
 	overflow-y: hidden;
 	overflow-x: hidden;
@@ -466,6 +466,16 @@ p {
 		flex-direction: column;
 	}
 	
+	#Works .slides img {
+		max-height: 35vh;
+		max-width: none;
+	}
+	
+	#Photos .slides img {
+		max-height: 35vh;
+		max-width: none;
+	}
+	
 }
 
 @media only screen and (min-aspect-ratio: 1/1) {
@@ -482,6 +492,16 @@ p {
 	.img-div img {
 		height: calc(100vh - 5vw);
 		height: calc(calc(var(--vh, 1vh) * 100) - 5vh);
+	}
+	
+	#Works .slides img {
+		max-height: 80vh;
+		max-width: none;
+	}
+
+	#Photos .slides img {
+		max-height: 80vh;
+		max-width: none;
 	}
 }
 
